# yahooquery

./: .gitignore  .sourcery.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: workflow.yml
tests/: test_country.py  test_ticker.py  test_ticker_additional.py
yahooquery/: __init__.py  base.py  misc.py  research.py  screener.py  ticker.py
yahooquery/utils/: __init__.py
