[project]
requires-python = ">=3.8"


[tool.poetry]
name = "yahooquery"
version = "2.3.7r5"
description = "Python wrapper for an unofficial Yahoo Finance API"
authors = ["Doug Guthrie <douglas.p.guthrie@gmail.com>"]
documentation = "https://yahooquery.dpguthrie.com"
keywords = ["python", "API", "finance", "stocks", "Yahoo Finance"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.32.0"
urllib3 = "^2.2.1"
pandas = "^2.0.3"
requests-futures = "^1.0.1"
tqdm = "^4.65.0"
lxml = "^4.9.3"
selenium = {version = "^4.10.0", optional = true}
beautifulsoup4 = "^4.12.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"
mkdocs-material = "^9.1.18"
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
premium = ["selenium"]
