[project]
requires-python = ">=3.9"


[tool.poetry]
name = "yahooquery"
version = "2.3.7r6"
description = "Python wrapper for an unofficial Yahoo Finance API"
authors = ["Doug Guthrie <douglas.p.guthrie@gmail.com>"]
documentation = "https://yahooquery.dpguthrie.com"
keywords = ["python", "API", "finance", "stocks", "Yahoo Finance"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
requests = ">=2.32.0"
urllib3 = ">=2.2.2"
pandas = "*"
requests-futures = "*"
tqdm = "*"
lxml = "*"
selenium = {version = "*", optional = true}
beautifulsoup4 = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
mkdocs-material = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
premium = ["selenium"]
